2024-11-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: Fix returing receiver when earlier/later argument
	is equal to the receiver.  Various formatting fixes.

2024-10-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUndoManager.m: set zero/nil return value when forwarding
	invocation ... in case calling code tries to use the result.

2024-10-28 Hugo Melder <hugo@algoriddim.com>

	* Source/NSString.m:
	-commonPrefixWithString:options: returns nil when string supplied as
	first argument is nil. On macOS, the empty string is returned instead.
	Align implementation with macOS.

2024-10-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Create an NSError object when we fail to
	copy because the destination item already exists.

2024-10-10: Hugo Melder <hugo@algoriddim.com>

	* Source/NSDate.m:
	* Source/NSDatePrivate.h:
	NSDate is now a small object in slot 6, when configuring GNUstep with the
	clang/libobjc2 toolchain.  This is done by compressing the binary64 fp
	holding the seconds since reference date (because someone at Apple thought
	it would be a good idea to represent a time interval as a fp). Note that
	this assumes that IEEE 754 is used.
	* Source/NSCalendarDate.m:
	Remove access to the NSDate private concrete Class
	and implement -timeIntervalSinceReferenceDate instead.
	Previously, all methods of the concrete date class were
	added to NSCalendarDate via GSObjCAddClassBehavior.

2024-23-09: Hugo Melder <hugo@algoriddim.com>

	* Headers/Foundation/NSThread.h:
	* Source/NSString.m:
	* Source/NSThread.m:
	Cache ICU collator in thread-local storage to avoid
	expensive construction when comparing strings.

2024-08-13: Hugo Melder <hugo@algoriddim.com>

	* Source/NSOperation.m:
	* Headers/Foundation/NSOperation.h:
	Give NSOperationQueue worker threads a proper thread
	name for easy identification.

2024-08-12 Hugo Melder <hugo@algoriddim.com>
	* Source/NSThread.m:
	Fix threadPriority and setThreadPriority: on Android.
